istio-network/rancher-external-ssl/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rancher-gateway
  namespace: cattle-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - my-rancher.local.vm
      port:
        name: http
        number: 80
        protocol: HTTP
