istio-network/rancher-external-ssl/DistinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rancher
  namespace: cattle-system
spec:
  host: rancher.cattle-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
