istio-network/rancher-external-ssl/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rancher-vs
  namespace: cattle-system
spec:
  gateways:
    - rancher-gateway
  hosts:
    - my-rancher.local.vm
  http:
    - headers:
        request:
          set:
            x-forwarded-proto: https
      route:
        - destination:
            host: rancher.cattle-system.svc.cluster.local
            port:
              number: 80
